Updating emeritus for SP26

--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -4,158 +4,163 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sable Cantus, CISSP</title>
-<!-----------------------------------------------------
+    <!-----------------------------------------------------
            _     _                        _
  ___  __ _| |__ | | ___    ___ __ _ _ __ | |_ _   _ ___
 / __|/ _` | '_ \| |/ _ \  / __/ _` | '_ \| __| | | / __|
 \__ \ (_| | |_) | |  __/ | (_| (_| | | | | |_| |_| \__ \
 |___/\__,_|_.__/|_|\___|  \___\__,_|_| |_|\__|\__,_|___/
 ------------------------------------------------------>
-    <style>
-      body {
-        margin: 1em 10em;
-        width: 70%;
-        margin: 0 auto;
-      }
-      td:nth-child(1), th:nth-child(1) {
-        text-align: center;
-      }
-    </style>
-    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header><a href="https://cantus.us/">Home</a></header>
 
-    <img src="saddleback.svg" width="100px"/>
+    <img src="saddleback.svg" width="100px" />
+
+    <p>
+      I am an Associate Faculty member with the Saddleback College Emeritus Institute since 2020.
+    </p>
 
     <h2>ECIM 502 - INTERMEDIATE LIFE AND TECHNOLOGY INTEGRATION (EI)</h2>
 
-    <p>Monday nights 6pm—7:50pm</p>
+    <p>Monday nights 6pm—7:50pm on Zoom.</p>
 
-    <p>➡️ <a href="https://www.saddleback.edu/sites/default/files/2025-05/Fall_25_Emeritus_Schedule-compressed.pdf" target="_blank">View the Fall 2025 Booklet and register for classes.</a></p>
-    
+    <p>From the catalog:</p>
     <blockquote>
-        <p>Designed for the older adult, intermediate concepts are introduced related to current technologies to expand skill sets through the integration of technology into life. Topics include in depth concepts on Smartphone features for Android and Iphone, Ipads, Mac computers, Chromebooks, cloud computing, and security features.</p>
-        <p>This is an online synchronous class with all course requirements completed via Canvas. There are required live-stream meetings during all of the days/times that are on the course schedule. </p>
+      <p>
+        Designed for the older adult, intermediate concepts are introduced
+        related to current technologies to expand skill sets through the
+        integration of technology into life. Topics include in depth concepts on
+        Smartphone features for Android and Iphone, Ipads, Mac computers,
+        Chromebooks, cloud computing, and security features.
+      </p>
+      <p>
+        This is an online synchronous class with all course requirements
+        completed via Canvas. There are required live-stream meetings during all
+        of the days/times that are on the course schedule.
+      </p>
     </blockquote>
-    
-    <p>The content in this course will span across multiple terms. Each semester will contain modules from the list below. Some modules can be thoroughly explored in a single week and some will require multiple weeks. The specific order for each semester will be listed in the syllabus.</p>
+
+    <p>
+      This course is offered in content modules that span from one to three
+      weeks. Each module covers a set of related topics. You can repeat course.
+      You may get different topics in addition to updated information each term.
+    </p>
 
     <table>
-      <caption>Course Modules</caption>
+      <caption>
+        Spring 2026 Schedule
+      </caption>
       <colgroup>
-        <col style="width: 11%;">
-        <col style="width: 89%;">
-    </colgroup>
+        <col style="width: 11%" />
+        <col style="width: 89%" />
+      </colgroup>
       <thead>
-          <tr>
-              <th>Weeks</th>
-              <th>Module Name</th>
-          </tr>
+        <tr>
+          <th>Date</th>
+          <th>Content Module</th>
+        </tr>
       </thead>
       <tbody>
-          <tr>
-              <td>2</td>
-              <td>Internet browsers. The true operating system of today.</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Passwords and password management. Creating, storing, and finding our passwords</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Manage and secure your email accounts. Using Gmail, Outlook, Proton Mail, personal domains, and more</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Your New (Voice) Assistant - Alexa, Siri, and Google</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Cloud storage: Google Drive, Dropbox, One Drive, and more</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Google: Docs, Sheets, Slides, and Forms</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Staying Safe Online – Focused talk about online security</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Personal backup strategies both local and in the cloud for your computer and/or mobile devices</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Focus ON: iOS</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Securing your computer or device: Keeping up to date with patching and current software releases</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Searching the Web: Google, Bing, Duck Duck Go</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Music, Movies, and TV - Netflix, Disney+, Prime Video, Spotify, Apple Music ... Everything is Streaming Now.</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Social Media – Facebook, Twitter, Instagram, TikTok, and More...</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>eBooks, eBook Readers, and eBook Management</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Cameras, doorbells, thermostats and light bulbs – The Internet of Things has taken over our world. Alexa, Google Home</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>How to Buy and Setup a New Computer: Microsoft Windows, Apple macOS</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Focus ON: Windows 11 and Microsoft Office</td>
-          </tr>
-          <tr>
-              <td>2</td>
-              <td>Focus ON: macOS and Apple’s Productivity Apps</td>
-          </tr>
-          <tr>
-              <td>1</td>
-              <td>Text Messaging, both insecure and secure: SMS, Whatsapp, Facebook Messenger, Signal, Threema, and more</td>
-          </tr>
-          <tr>
-              <td>3</td>
-              <td>Machine Learning & AI: Chatbots, and Generative Images (Including prompt engineering).</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Personal Tracking Devices – Air Tags (Tile, Pebblebee, & more)</td>
+        <tr>
+          <td>1/12</td>
+          <td>Course Introduction and Overview</td>
         </tr>
         <tr>
-            <td>1</td>
-            <td>What are Passkeys?</td>
+          <td>1/19</td>
+          <td><i>--- No Class Meeting ---</i></td>
         </tr>
         <tr>
-            <td>1</td>
-            <td>Configure Your Wireless Router</td>
+          <td>1/26</td>
+          <td>What is Cloud Storage?</td>
         </tr>
         <tr>
-            <td>2</td>
-            <td>Managing Your Photos</td>
+          <td>2/2</td>
+          <td>Google Workspace</td>
         </tr>
         <tr>
-            <td>1</td>
-            <td>How to Setup a New PC</td>
+          <td>2/9</td>
+          <td>Modern Web Browsers</td>
         </tr>
-    </tbody>
-</table>
+        <tr>
+          <td>2/16</td>
+          <td><i>--- No Class Meeting ---</i></td>
+        </tr>
+        <tr>
+          <td>2/23</td>
+          <td>Web Browser Plugins &amp; Extensions</td>
+        </tr>
+        <tr>
+          <td>3/2</td>
+          <td>Staying Safe Online – Focused talk about online security</td>
+        </tr>
+        <tr>
+          <td>3/9</td>
+          <td>Personal Backup Strategies</td>
+        </tr>
+        <tr>
+          <td>3/16</td>
+          <td><i>--- No Class Meeting ---</i></td>
+        </tr>
+        <tr>
+          <td>3/23</td>
+          <td>FocusON: Privacy.com</td>
+        </tr>
+        <tr>
+          <td>3/30</td>
+          <td>Passwords and Password Management</td>
+        </tr>
+        <tr>
+          <td>4/6</td>
+          <td>FocusON: Bitwarden Password Manager</td>
+        </tr>
+        <tr>
+          <td>4/13</td>
+          <td>FocusON: Bitwarden Password Manager</td>
+        </tr>
+        <tr>
+          <td>4/20</td>
+          <td>Syncing Notes Securely – The Standard Notes App</td>
+        </tr>
+        <tr>
+          <td>4/27</td>
+          <td>AI/LLMs – Overview of Chatbots Today (Gemini, ChatGPT, etc.)</td>
+        </tr>
+        <tr>
+          <td>5/4</td>
+          <td>AI/LLMs – Overview of Chatbots Today (Gemini, ChatGPT, etc.)</td>
+        </tr>
+        <tr>
+          <td>5/11</td>
+          <td>AI/LLMs – Overview of Chatbots Today (Gemini, ChatGPT, etc.)</td>
+        </tr>
+        <tr>
+          <td>5/18</td>
+          <td>End of Term Review and Feedback (Final Meeting)</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
+
+<p>
+  ➡️
+  <a
+    href="https://classes.socccd.edu/smartscheduleweb/list/1/S/202630/grp/Emeritus_XCN0"
+    target="_blank"
+    >View the live schedule and register for classes.</a
+  >
+</p>
+
+<p><a href="https://www.saddleback.edu/learning-saddleback/emeritus-institute" target="_blank">Learn more about the Emeritus Institute here</a>.</p>
