More updates. Add AI portrait.

--- a/emeritus/index.html
+++ b/emeritus/index.html
@@ -26,17 +26,24 @@
   <body>
     <header><a href="https://cantus.us/">Home</a></header>
 
-    <img src="saddleback.svg" width="100px" />
+    <!-- <img src="saddleback.svg" width="100px" /> -->
+
+    <br>
+
+    <img src="https://s3-us-west-1.amazonaws.com/files.3cmedia/u_673/28450/ani_me.png" width="150px" alt="chatgpt portrait" title="This is my AI portrait">
+    
+    <p>Sable Cantus, CISSP<br>
+      Associate Faculty, Emeritus Institute</p>
 
     <p>
-      I am an Associate Faculty member with the Saddleback College Emeritus Institute since 2020.
+      I have been with the Emeritus Institute since 2020. I love exploring computers and technology. Here is my Spring 2026 course offering.
     </p>
 
     <h2>ECIM 502 - INTERMEDIATE LIFE AND TECHNOLOGY INTEGRATION (EI)</h2>
 
     <p>Monday nights 6pm—7:50pm on Zoom.</p>
 
-    <p>From the catalog:</p>
+    <p>Course description from the catalog:</p>
     <blockquote>
       <p>
         Designed for the older adult, intermediate concepts are introduced
@@ -44,11 +51,6 @@
         integration of technology into life. Topics include in depth concepts on
         Smartphone features for Android and Iphone, Ipads, Mac computers,
         Chromebooks, cloud computing, and security features.
-      </p>
-      <p>
-        This is an online synchronous class with all course requirements
-        completed via Canvas. There are required live-stream meetings during all
-        of the days/times that are on the course schedule.
       </p>
     </blockquote>
 
