Spring 26 courses to the top

--- a/msac/index.html
+++ b/msac/index.html
@@ -173,7 +173,7 @@
       /></a>
     </article> -->
 
-    <h2>Winter 2026</h2>
+    <!-- <h2>Winter 2026</h2>
     <p>Winter term begins on <b>1/5/2025</b> and ends on <b>2/15/2025</b>.</p>
 
     <p>
@@ -255,7 +255,7 @@
       <figure>
         <img src="img/pld-cover.jpg" width="150px" alt="book cover" />
       </figure>
-    </article>
+    </article> -->
 
     <h2>Spring 2026</h2>
 
